fix(css): fix search overflow firefox
In 1.10 add min-width to the input to fix overflowing icons in Firefox.

Closes DCOS-40881

--- a/src/styles/components/form-elements/form-group/styles.less
+++ b/src/styles/components/form-elements/form-group/styles.less
@@ -35,6 +35,14 @@
         }
       }
     }
+
+    input {
+      min-width: 0;
+    }
+
+    .form-control-group-add-on .icon {
+      display: block;
+    }
   }
 }
 
